[gd_scene load_steps=3 format=3 uid="uid://bcueeyoy2yjho"]

[ext_resource type="Script" uid="uid://cint12vwwf1ij" path="res://scenes/UI/hud.gd" id="1_7n4fj"]
[ext_resource type="FontFile" uid="uid://bdggrxvbl8vt5" path="res://assets/fonts/BoldPixels.ttf" id="2_vphgt"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_7n4fj")

[node name="CoinLabel" type="Label" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 33.0
theme_override_fonts/font = ExtResource("2_vphgt")
theme_override_font_sizes/font_size = 21
text = "Coins: 0 / 10"

[node name="TimeLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 33.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_vphgt")
theme_override_font_sizes/font_size = 21
text = "00:00.00"
horizontal_alignment = 2

[node name="CenterMsg" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MsgLabel" type="Label" parent="CenterMsg"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vphgt")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1
